--- a/katia-reis-project/_css/style.css
+++ b/katia-reis-project/_css/style.css
@@ -1,19 +1,63 @@
 body {
-    background-color: #ccc;
+    background-color: #f7f7f7;
+    font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
 }
 
+/* Altera a formatação da foto principal */
+.face_photo {
+    border: 1px solid #505050;
+    border-radius: 50%;
+}
+
+/* Altera a formatação dos títulos */
 #title, .subtitle, .post_title {
-    color: blue;
+    color: #505050;
+}
+
+/* Altera a formatação do título principal */
+#title {
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+/* Altera a formatação dos links */
+a {
+    text-decoration: underline;
+    color: #505050;
 }
 
 .post_title {
     font-size: 16px;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 10px;
 }
 
 .post {
     background-color: #fff;
-    padding: 10px;
-    border: 3px solid #000;
-    margin: 10px;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.post_content {
+    margin: 0;
+}
+
+.post_image {
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.contact_list {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 15px;
+}
+
+.contact_list li a {
+    color: blue;
+    text-decoration: none;
 }
