Instagram Landing Page Project
Reproduzindo a landing page do Instagram com as habilidades aprendidas no curso Web Dev Front-end da Digital Inovation One

--- a/katia-reis-project/_css/style.css
+++ b/katia-reis-project/_css/style.css
@@ -44,6 +44,7 @@ a {
 
 .post_content {
     margin: 0;
+    text-align: justify;
 }
 
 .post_image {
@@ -54,10 +55,10 @@ a {
 .contact_list {
     list-style-type: none;
     margin: 0;
-    padding-left: 15px;
+    padding-left: 10px;
 }
 
 .contact_list li a {
     color: blue;
-    text-decoration: none;
+    text-decoration: none; /* Altera a formatação da lista para nenhum marcador */
 }
