--- a/netflix-interface-clone/css/main.css
+++ b/netflix-interface-clone/css/main.css
@@ -45,6 +45,7 @@ header nav a:hover{
     color: #fff;
 }
 
+
 /* Filme Principal */
 
 .filme-principal{
@@ -68,7 +69,7 @@ header nav a:hover{
 .titulo{
     margin-top: 15%;
     font-size: 40px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Helvetica', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Estilo para o botão */
