Personal Resume Website
Projeto -  Personal Resume Website
Neste projeto utilizo as tecnologias aprendidas até agora: HTML5, CSS3 e JavaScript. Como estruturar um layout, técnicas de CSS3 com containers e variáveis, como posicionar os elementos com Flexbox e como utilizar plugins Jquery.

--- a/katia-reis-webpage/_css/style.css
+++ b/katia-reis-webpage/_css/style.css
@@ -62,3 +62,9 @@ a {
     color: blue;
     text-decoration: none; /* Altera a formatação da lista para nenhum marcador */
 }
+
+.rodape{
+    background-color: gray;
+    margin-top: 20px;
+    padding: 10px;
+}
